# linux_wd_learn

./: README.md  目录.md  目录.txt
build-project01-C_C_2023_11_04-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  project01
build-project01-C_C_2023_11_04-Debug/.cmake/api/v1/reply/: cache-v2-e027ab55d675e6902f3e.json  cmakeFiles-v1-724757b45a4930dfaea1.json  codemodel-v2-3083567413631415a772.json  index-2023-11-04T10-46-39-0185.json  target-project01-Debug-23fff53bb5c7a0405103.json
build-project01-C_C_2023_11_04-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-cf787c164762ad45ae9f.json  codemodel-v2-825fa2147e38b489b92b.json  index-2023-11-04T10-23-16-0903.json  target-project01-Debug-4261ca54d1ad71eddc5d.json
build-project02-C_C_2023_11_04-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  project02
build-project02-C_C_2023_11_04-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-9677e7f633f6b5af6cba.json  codemodel-v2-8959d16cb5f10c331250.json  index-2023-11-04T11-34-37-0307.json  target-project02-Debug-2ad13ef03ae3287caa42.json
build-project02-C_C_2023_11_04-Debug/.cmake/api/v1/reply.prev/: cache-v2-2a7e364182f70205ce10.json  cmakeFiles-v1-b64c7e30c7194f37bcf4.json  codemodel-v2-a70b5430cf7810dd3417.json  index-2023-11-04T11-27-09-0430.json  target-project02-Debug-ff05bedeaf066a327dbd.json
build-project03-C_C_2023_11_04-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  project03
build-project03-C_C_2023_11_04-Debug/.cmake/api/v1/reply/: cache-v2-9509c06943c9212fc433.json  cmakeFiles-v1-3c1afa990b2a088acd5c.json  codemodel-v2-6243d6edbd944dbdccf8.json  index-2023-11-04T11-50-22-0747.json  target-project03-Debug-fc3e70d9cf50aac8674e.json
build-project03-C_C_2023_11_04-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-999b3bbc8c4db0f20d37.json  codemodel-v2-769782df7841364babf3.json  index-2023-11-04T11-50-09-0568.json  target-project03-Debug-60a373732c174db223ef.json
build-project04-C_C_2023_11_05-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  project04
build-project04-C_C_2023_11_05-Debug/.cmake/api/v1/reply/: cache-v2-e4fb23afd77010109af7.json  cmakeFiles-v1-4ea18540fcdd0023968f.json  codemodel-v2-3552928ee80dd6b844ab.json  index-2023-11-05T13-13-01-0932.json  target-project04-Debug-a86c235c5c0d72e8851b.json
build-project04-C_C_2023_11_05-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-f6f01e4beadaee4da418.json  codemodel-v2-8cdfc19565a1d9559d93.json  index-2023-11-05T12-51-31-0158.json  target-project04-Debug-9c123506bac563dc3fc4.json
build-project05-C_C_2023_11_08-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  project05
build-project05-C_C_2023_11_08-Debug/.cmake/api/v1/reply/: cache-v2-c4aacc38117bfdafe13a.json  codemodel-v2-dd836d1bc6b8e3fbbc64.json  index-2023-11-08T13-16-57-0961.json  target-project05-Debug-b01aef659b9307ef3892.json
build-project05-C_C_2023_11_08-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-e9270de1512dfe506d22.json  codemodel-v2-f321ea9cf79dc80101c8.json  index-2023-11-08T13-16-48-0947.json  target-project05-Debug-d84ab553335fd95b5da0.json
build-project06-C_C_2023_11_09-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  file1  project06
build-project06-C_C_2023_11_09-Debug/.cmake/api/v1/reply/: index-2023-11-09T11-37-06-0252.json  target-project06-Debug-955d532dda1c068ab9fc.json
build-project06-C_C_2023_11_09-Debug/.cmake/api/v1/reply.prev/: cache-v2-8edbc1c710b5376bd76b.json  cmakeFiles-v1-2cc3db071e0e346401d3.json  codemodel-v2-a5f16d90a3595f991297.json
build-project08-C_C_2023_11_10-Debug/: CMakeCache.txt.prev  Makefile  add  add.c  cmake_install.cmake  project08  system
build-project08-C_C_2023_11_10-Debug/.cmake/api/v1/reply/: cache-v2-25e9ce61680618768945.json  cmakeFiles-v1-5294058d7f43712b8072.json  codemodel-v2-0fea13cf03ef8fee69f3.json  index-2023-11-10T12-27-19-0923.json  target-project08-Debug-ea4baa98eca7058ba87f.json
build-project08-C_C_2023_11_10-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-eaae61e4c8fea42575a2.json  codemodel-v2-39fccf3c4e4b9b5c1ebe.json  index-2023-11-10T12-27-03-0111.json  target-project08-Debug-001c61e571f9d93d1696.json
build-project09-C_C_2024_03_10-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  project09
build-project09-C_C_2024_03_10-Debug/.cmake/api/v1/reply/: cache-v2-d0575c18a4a288edc1a5.json  cmakeFiles-v1-8311efb6f585b7497914.json  codemodel-v2-ac9b6bbad31ccd92075f.json  index-2024-03-10T13-32-11-0887.json  target-project09-Debug-3bba58c69b6200d7873c.json
build-project09-C_C_2024_03_10-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-693d20f4b75798cb5e3a.json  codemodel-v2-b1c992b74c61f1fd9455.json  index-2024-03-10T13-30-43-0449.json  target-project09-Debug-71cdaf95f6b2c8763ac0.json
build-project10-C_C_2024_03_10-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  project10
build-project10-C_C_2024_03_10-Debug/.cmake/api/v1/reply.prev/: cache-v2-96f123dec44da78af820.json  cmakeFiles-v1-d9dff358078897b92764.json  codemodel-v2-d5767fe543cd2adb4a7f.json  index-2024-03-10T13-35-02-0738.json  (+1 more)
build-project11-C_C_2024_03_11-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  project11
build-project12-C_C_2024_03_11-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  project12
build-project13-C_C_2024_03_11-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
project01/: CMakeLists.txt  func.h  main.c
project02/: CMakeLists.txt  func.h  main.c
project03/: CMakeLists.txt  main.c
project04/: CMakeLists.txt  func.h  main.c
project05/: CMakeLists.txt  func.h  main.c
project06/: CMakeLists.txt  chat1  chat1.c  func.h  main.c  read  read.c  write  write.c
project07/: chat1  chat1.c  chat2  chat2.c  overflow1  overflow1.c  overflow2  overflow2.c
project08/: CMakeLists.txt  main.c  pgid.c  system.c  test  test01.c  test02  test02.c
project09/: 01.pipe  02.pipe  CMakeLists.txt  main.c
project10/: CMakeLists.txt  main.c
project11/: CMakeLists.txt  main.c
project12/: CMakeLists.txt  func.h  main.c
project13/: CMakeLists.txt  main.c
(+27 files in other folders)
